@@ -1,3 +1,8 @@
+2007-11-04  Xavier Claessens  <xclaesse@gmail.com>
+
+	* libempathy-gtk/empathy-main-window.c: Display error message when an
+	account failed to connect
+
 2007-11-03  Xavier Claessens  <xclaesse@gmail.com>
 
 	* libempathy/empathy-contact-factory.c: Call ClearAvatar if the data
